# ZelusView

./: .gitignore  .gitmodules  CMakeLists.txt  Zelus.xml  ZelusViewMainWindow.cpp  ZelusViewMainWindow.h
VTKExtension/: CMakeLists.txt  vtk.module  vtkZelusBinaryReader.cxx  vtkZelusBinaryReader.h
VTKExtension/Resources/: Zelus.xml
ZelusPlugin/: CMakeLists.txt  paraview.plugin
ZelusPlugin/ZelusReader/: CMakeLists.txt  vtk.module
client/: CMakeLists.txt  ZelusFilters.xml  ZelusSources.xml  ZelusView.qrc  ZelusViewMainWindow.cpp  ZelusViewMainWindow.h  ZelusViewMainWindow.ui
plugins/: CMakeLists.txt
plugins/ZelusPlugin/: CMakeLists.txt  paraview.plugin
plugins/ZelusPlugin/ZelusReader/: CMakeLists.txt  ZelusReader.xml  vtk.module  vtkZelusBinaryReader.cxx  vtkZelusBinaryReader.h  vtkZelusExtractCell.cxx  vtkZelusExtractCell.h  vtkZelusExtractType.cxx  vtkZelusExtractType.h
